--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,10 @@
         <td><%= post.content %></td>
         <td><%= post.user.email %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><% if policy(@post).update? %>
+          <%= link_to 'Edit', edit_post_path(post) %>
+          <% end %>
+        </td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
